--- a/module_1.ipynb
+++ b/module_1.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d6b809e9-881e-46a2-a4d9-122d4e0903ce",
    "metadata": {},
    "source": [
     "# Module 1\n",
@@ -17,7 +16,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c7ecbc5a-62d7-4cb8-8e34-66c9dee4bd1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +42,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01f31821-f9d5-4a1d-8c4d-296913f443e1",
    "metadata": {},
    "source": [
     "## Exercise 1 - Process\n",
@@ -55,7 +52,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "105fd52b-979e-4284-a47e-e700683640e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +119,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc44b759-814e-4cf6-9536-5b212aae0b06",
    "metadata": {},
    "source": [
     "## Exercise 2: Quality Control\n",
@@ -135,7 +130,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7c826ae-ee19-4ba4-baf7-5981fa085e6e",
    "metadata": {},
    "source": [
     "### Categorical Data\n",
@@ -148,7 +142,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "32df4c6b-6ed3-4438-ba11-18903707a8a3",
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +162,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a07da28f-dd7d-48d6-a83a-1fb0e099362a",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +181,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "596bdc69-9927-4c4f-b7e5-9dff408b0034",
    "metadata": {},
    "source": [
     "### Visual Inspection"
@@ -198,7 +189,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4d047059-8c12-4fd8-a9ec-51a7058ed8f5",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +246,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29687acb-5038-485c-964b-435316ba8cb1",
    "metadata": {},
    "source": [
     "### Search for impossible and unlikely values\n",
@@ -273,7 +262,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d3bf224a-c0bd-4434-8453-7b447da84196",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +281,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e03601e7-91e6-4516-8d0b-fe44a4a93d83",
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +301,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd6a3875-f721-4e56-8308-e61e690ff6a8",
    "metadata": {},
    "source": [
     "### Statistical tests\n",
@@ -324,7 +310,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e9ff1387-f262-4fc0-aa28-1b2baa45ec0d",
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +354,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "448dd959-4ec2-49de-93d3-ee8cf9cb6c68",
    "metadata": {},
    "source": [
     "### Sequential analysis\n",
@@ -380,7 +364,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ba090bc6-f48d-4a81-9169-fef047ea33b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +389,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a796ae9c-9248-416a-866d-de94086c2f84",
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +413,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34c0bae8-172b-41da-b581-e0d1477c564a",
    "metadata": {},
    "source": [
     "## Exercise 3 - Homogenization\n",
@@ -443,7 +424,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "484da21f-7f0e-4094-a149-0e05b15e1646",
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +471,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "600e67f4-ba2b-4fc0-aa5f-c18602e7f633",
    "metadata": {},
    "source": [
     "As can be seen from visual inspection, the unique sections are:\n",
@@ -509,7 +488,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34e4ca56-86d6-4fd8-938a-5068dbe7df04",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -517,7 +495,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "7a2f7d98-0113-4495-9588-a16b2b1d0582",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,21 +509,12 @@
     "mean2 = np.mean(mypd.loc[b][\"Candidate_T(degC)\"])-np.mean(mypd.loc[b][\"Reference_T(degC)\"])\n",
     "mean3 = np.mean(mypd.loc[c][\"Candidate_T(degC)\"])-np.mean(mypd.loc[c][\"Reference_T(degC)\"])\n",
     "mean4 = np.mean(mypd.loc[d][\"Candidate_T(degC)\"])-np.mean(mypd.loc[d][\"Reference_T(degC)\"])\n",
-    "corrections = [mean4-mean1, mean4-mean2, mean4-mean3,0]\n"
+    "corrections = [mean4-mean1, mean4-mean2, mean4-mean3,0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4e88bb5e-2e47-4cda-870d-812350d6c26e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
-   "id": "ef4b2545-8974-4a4a-97f8-ed7caa926daa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +545,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "dec6ec1d-a428-4d33-838a-7eeb36e57729",
    "metadata": {},
    "outputs": [
     {
@@ -611,19 +578,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbc1e092-aa52-451a-bcf3-34148f323484",
    "metadata": {},
    "source": [
     "## Exercise 4 - Data Assimilation\n",
     "\n",
     "### Question 1 Kalman Filter\n",
-    "*Assume that you have a substance that decays radioactively and you want to esimate the amount remaining (or radioactivity)...In addition, you have observations of a Geiger counter (in counts/s). The error of the observation is 2 counts/s, the error of the model is not constant but depends on value; the numbers are are already calculated for you...Now do the assimilation over the first 20 s*"
+    "*Assume that you have a substance that decays radioactively and you want to esimate the amount remaining (or radioactivity)...In addition, you have observations of a Geiger counter (in counts/s). The error of the observation is 2 counts/s, the error of the model is not constant but depends on value; the numbers are are already calculated for you...Now do the assimilation over the first 20 s*\n",
+    "\n",
+    "The modelled radiocative decay in the substance for period $\\Delta_{t}$ is: $N_{t+1} = N_{t}e^{\\lambda\\Delta_{t}}$\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "1c02695f-1b0b-43af-ab94-f135bf17edc7",
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +852,7 @@
     "\n",
     "# defines forecast model\n",
     "def first_func(i,x):\n",
-    "    # apply model formula to passed x\n",
+    "    # apply model formula to passed x, note delta_t = 1\n",
     "    data = x*math.exp(-0.5)\n",
     "    # assign value to xb at index i\n",
     "    mypd.at[i,\"xb\"] = data\n",
@@ -924,71 +891,48 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08647f7f-f92e-4caa-82a2-1050999ed3fc",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "bb3f136e-3dc4-4d44-95a5-5b0d67ea88c5",
    "metadata": {},
    "source": [
     "### Question 2 Football example\n",
     "\n",
-    "*Let’s return to the football example. The model is that of the inclined throw used above. Have a look at the PDF and download the Excel-sheet or use an R-script to open the data in txt-format. But before starting, try to come up with an algebraic formulation.*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "f53deff3-e01a-43ca-9af5-f9e56123a7bc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Insert markdown with formula derivation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "8b1fdd47-baf0-44ad-9b54-3ca1b0f355d6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# read in data\n",
-    "mydf = pd.read_csv(\"Reanalysis_DataAssimilation_Exercise2.csv\")\n",
+    "*Let’s return to the football example. The model is that of the inclined throw used above. Have a look at the PDF and download the Excel-sheet or use an R-script to open the data in txt-format. But before starting, try to come up with an algebraic formulation.*\n",
     "\n",
-    "# declare needed constants\n",
-    "g = 9.80665\n",
-    "a = 44.2\n",
-    "b = .01\n",
-    "r = 9\n",
-    "k = 500\n",
-    "const = a*b/(a*a*b+r) "
+    "We will need to calcuate several formulas for this exercise.\n",
+    "\n",
+    "First is that of the model of the throw. For this we will forecast x and z into the next period:\n",
+    "\n",
+    "$x_{t} = x_{t-1}+\\mu_{t-1}\\Delta_{t,t-1}$\n",
+    "\n",
+    "$z_{t} = z_{t-1}+\\mu_{t-1}\\Delta_{t,t-1}-0.5g\\Delta_{t,t-1}^2$\n",
+    "\n",
+    "Note that the velocity will change as well for each period, thus the model velocity vector $[u_t,v_t]^{T}$ should be adjusted at each period as well:\n",
+    "\n",
+    "$u_{t} = (x_{t}-x_{t-1})/\\Delta_{t,t-1}$ and \n",
+    "\n",
+    "$v_t = (z_{t}-z_{t-1})/\\Delta_{t,t-1}- 0.5g\\Delta_{t,t-1}$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "88fb1f69-eda1-47d6-836e-b457540f7b59",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define needed functions\n",
+    "# define forecast function for x and z\n",
     "\n",
     "def forecast_func(i):\n",
-    "    # forecast xb(t) / zb(t)  from x(t-1)/zb(t-1)\n",
+    "    # forecast xb(t) zb(t) from x(t-1) z(t-1)\n",
     "    mydf.at[i,\"xb\"] = mydf.at[i-1,\"x\"]+ mydf.at[i-1,\"u\"]*0.1\n",
     "    mydf.at[i,\"zb\"] = mydf.at[i-1,\"zed\"]+ mydf.at[i-1,\"w\"]*0.1-0.5*g*.01\n",
     "    return\n",
     "\n",
-    "def correct_func(index):\n",
-    "    # correct the forecast with the camera, accounting for measurement error\n",
-    "    mydf.at[index,\"x\"] = (mydf.at[index,\"i\"]-a*mydf.at[index,\"xb\"])*const+mydf.at[index,\"xb\"]\n",
-    "    mydf.at[index,\"zed\"] = mydf.at[index,\"zb\"]- (mydf.at[index,\"j\"]-(500-a*mydf.at[index,\"zb\"]))*const\n",
-    "    return\n",
-    "\n",
+    "# define recalculation of speed function from observed \n",
     "def speed_func(i):\n",
     "    # recalculate velocity from xt, xt-1, z,zt-1\n",
     "    mydf.at[i,\"u\"] = (mydf.at[i,\"x\"]-mydf.at[i-1,\"x\"])/.1\n",
@@ -997,9 +941,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we need the correction function. Thanks to the assumptions made, we can treat the variance in our model forecast and our observations as independent, thus we can calculate \"observed\" x,z from \"modelled\" x,z in each period with the following formulation:\n",
+    "\n",
+    "$x = x_b + [][]^T$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def correct_func(index):\n",
+    "    # correct the forecast with the camera, accounting for measurement error\n",
+    "    mydf.at[index,\"x\"] = (mydf.at[index,\"i\"]-a*mydf.at[index,\"xb\"])*const+mydf.at[index,\"xb\"]\n",
+    "    mydf.at[index,\"zed\"] = mydf.at[index,\"zb\"]- (mydf.at[index,\"j\"]-(500-a*mydf.at[index,\"zb\"]))*const\n",
+    "    return\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "cddbea66-8495-4f09-aebb-795f236a3dcc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1015,7 +1004,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "94fea473-170b-4050-98c5-ce33e30f4e03",
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1031,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1057,7 +1045,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
