module 1 final assignment mahalobnis

--- a/assimilation.ipynb
+++ b/assimilation.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "952ffc19-b67e-4c88-8937-6a1d5a91c6a0",
    "metadata": {},
    "source": [
     "# Exercise 4 - Data Assimilation"
@@ -11,7 +10,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3d35c1c4-3d68-4bdd-b8f3-4f5ad624af70",
    "metadata": {
     "tags": []
    },
@@ -39,7 +37,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9691878-6b17-4746-898b-5d8a3192d4a1",
    "metadata": {},
    "source": [
     "## Question 1 Kalman Filter\n",
@@ -49,7 +46,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ab22518e-668c-4d24-9697-de326b033f13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +88,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c89211dd-018b-4863-aa9b-7e75468f4482",
    "metadata": {},
    "source": [
     "## Question 2 Football example"
@@ -101,7 +96,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3a9a3155-ee61-4c02-8ed1-0fb41328e2c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +114,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "297ed8a0-1412-4da4-a1c2-3fb60c33b45a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +127,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1617d5df-eeb9-4300-9763-ee3ce11307c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +140,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d430f0fb-d551-48bf-94da-b50c62fc5ced",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +153,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5d501d17-340f-466f-b4b0-79546e902604",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +167,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "40fad45c-590b-448b-819b-f15d2a15b486",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +194,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -219,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
