--- a/downscaling.ipynb
+++ b/downscaling.ipynb
@@ -2,8 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "760c5c0f-4cc3-42b0-bdeb-6ab24a458a5e",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,13 +17,13 @@
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import colors\n",
     "import seaborn as sns\n",
-    "import matplotlib.dates as mdates"
+    "import matplotlib.dates as mdates\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd8eacf5-578c-4589-8873-4dbf5cb1bdf4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -32,7 +31,6 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "c3120c75-5a28-4528-94c4-78e5986a3477",
    "metadata": {
     "tags": []
    },
@@ -45,7 +43,6 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "7892ae7c-6615-46de-bf9b-ff8f709a0139",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +65,6 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "4df195cd-790c-4d9d-bfd1-d10a3fd5f796",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +91,6 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "e36e00b7-1b79-4f93-a2f1-722b5905ce40",
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +224,6 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "8e28203b-137f-4074-8f6c-4ca306d554a4",
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +332,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3982c71-7308-4ab8-913a-e0fc5b68a780",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -346,7 +339,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -360,7 +353,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
